# GEM-4-VLA

./: .gitignore  .gitmodules  CLAUDE.md  DEVELOPMENT.md  README.ja.md  README.md  THIRD_PARTY_NOTICES.md  future_archi.drawio  now_archi.drawio  pyproject.toml  system.drawio
configs/accelerate/: dl40_2gpu.yaml  dl40_2gpu_deepspeed_zero2.yaml  dl40_2gpu_fsdp.yaml  dl40_4gpu.yaml  dl40_6gpu.yaml  dl42_1gpu.yaml  dl50_1gpu.yaml  dl50_2gpu.yaml  dl50_4gpu.yaml
configs/data/: libero.yaml  libero_multidomain.yaml  libero_real.yaml
configs/deploy/: _template.yaml  so101_v46.yaml  v36_libero_spatial.yaml
configs/eval/: libero_10_v47_step25k_ft_step10000.yaml  libero_10_v47_step25k_ft_step20000.yaml  libero_10_v47_step25k_ft_step30000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step10000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step15000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step20000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step25000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step30000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step35000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step40000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step45000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step45000_10ep.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step5000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step50000.yaml  libero_10_v47_step95k_ft_4gpu_accum4_step50000_10ep.yaml  libero_baseline_arch_smoke.yaml  libero_baseline_shim.yaml  libero_baseline_shim_smoke.yaml  libero_baseline_step10000.yaml  libero_baseline_sweep.yaml  libero_ee6d_step5000.yaml  libero_ee6d_sweep.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step10000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step15000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step20000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step25000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step30000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step35000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step40000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step45000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step5000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step50000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step50000_10ep.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step55000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step55000_10ep.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step60000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step65000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step65000_10ep.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step70000.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_step70000_10ep.yaml  (+116 more)
configs/model/: x_vla_adapter.yaml
configs/train/: _example_ft_from_hf.yaml  bottle_pick_v47_step100k_ft_dl41_2gpu.yaml  bottle_pick_v47_step100k_ft_dl41_2gpu_resume30k.yaml  cookie_replace_v47_step100k_ft_dl42_2gpu.yaml  jar_open_v47_step100k_ft_dl42_2gpu.yaml  jar_open_v47_step100k_ft_dl42_4gpu.yaml  libero_10_v47_step25k_ft.yaml  libero_10_v47_step25k_ft_resume30k.yaml  libero_10_v47_step95k_ft_1gpu_noaccum.yaml  libero_10_v47_step95k_ft_4gpu_accum4.yaml  libero_10_v47_step95k_ft_4gpu_accum4_resume50k.yaml  libero_goal_v47_step100k_ft_dl41_2gpu.yaml  libero_goal_v47_step100k_ft_dl41_2gpu_resume75k.yaml  libero_goal_v47_step25k_ft.yaml  libero_multidomain_v1.yaml  libero_multidomain_v34.yaml  libero_multidomain_v35.yaml  libero_object_v47_step100k_ft_dl41_2gpu.yaml  libero_object_v47_step100k_ft_dl41_2gpu_resume75k.yaml  libero_object_v47_step25k_ft.yaml  libero_spatial.yaml  libero_spatial_ee6d_lora.yaml  libero_spatial_ee6d_lora_smoke.yaml  libero_spatial_ee6d_smoke.yaml  libero_spatial_lora.yaml  libero_spatial_lora_smoke100.yaml  libero_spatial_overfit_task3.yaml  libero_spatial_overfit_task3_v4.yaml  libero_spatial_overfit_tiny.yaml  libero_spatial_v10.yaml  libero_spatial_v11.yaml  libero_spatial_v12.yaml  libero_spatial_v13.yaml  libero_spatial_v14.yaml  libero_spatial_v15.yaml  libero_spatial_v16.yaml  libero_spatial_v17.yaml  libero_spatial_v18.yaml  libero_spatial_v19.yaml  libero_spatial_v20.yaml  (+71 more)
data/norm_stats/: bottle_pick.json  cookie_replace.json  jar_open.json  libero_10.json  libero_goal.json  libero_object.json  libero_spatial.json  so101_test.json
docs/: baseline_compat_v25.md  v23_repro_journey.md  xvla_restore_plan.md
docs/architectures/: README.md  architectures.mmd  v32.mmd  v35_arch.mmd  v35_dataflow.mmd  v47_arch_v3.mmd  x_vla_adapter.md
docs/examples/: coding_patterns.md
envs/jetson/: pyproject.toml
envs/x86/: pyproject.toml
scripts/: eval.py  ft_lerobot_from_hf.py  serve.py  setup.sh  setup_jetson.sh  setup_x86.sh  train.py
tests/: _stubs.py  conftest.py  test_action_alignment.py  test_action_head_t_axis_propagation.py  test_action_loss_mask_grad.py  test_action_queries.py  test_action_query_extraction.py  test_action_transform.py  test_admin_schema.py  test_backfill_native_action.py  test_base_robot.py  test_checkpoint.py  test_checkpoint_native_action.py  test_checkpoint_vla_policy.py  test_compute_q99_stats.py  test_constants.py  test_denormalize_q99.py  test_deployment_imports.py  test_deployment_schemas.py  test_domain_adapter.py  test_domain_aware_linear.py  test_domain_aware_swap_full.py  test_ee6d_loss.py  test_eval_video.py  test_gemma4_lora.py  test_gemma4_wrapper.py  test_image_transform.py  test_inference_server_minimal.py  test_inference_server_yamlless.py  test_input_packer.py  test_input_packer_config.py  test_inputs_embeds_overwrite.py  test_iterable_sharding.py  test_l1_regression_action_head.py  test_language_transform.py  test_last_action_chunk_real.py  test_lerobot_libero_dataset.py  test_lerobot_libero_dataset_ee6d.py  test_libero_dataset.py  test_libero_eval.py  (+47 more)
tools/: aggregate_libero_stats.py  arch_v3_smoke.py  backfill_meta_native_action.py  compute_norm_stats.py  compute_norm_stats_so101.py  convert_baseline_ckpt.py  convert_rebot_bottle_v3_to_v21.py  convert_so101_v3_to_v21.py  download_oxe_v37.py  eval_baseline_shim.py  extract_lerobot_frames.py  precompute_oxe_stats.py  push_ckpt_to_hf.py  v45_action_head_per_block.py  v45_diagnose.py  v45_diagnose_deep.py
(+100 files in other folders)
