[project]
name = "vla_project"
version = "0.0.1"
description = "X-VLA-Adapter: Gemma4 + SigLIP + per-domain VLA-Adapter head"
requires-python = ">=3.10,<3.12"  # tensorflow==2.15.0 (via dlimp) ships wheels for Python 3.9-3.11 only
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=5.5",   # Gemma4 model_type requires 5.5+ (5.0-5.4 only ships gemma3n)
    "accelerate>=1.0",
    "omegaconf>=2.3",
    "einops>=0.8",
    "tqdm>=4.66",
    "numpy>=1.26",
    "pillow>=10.0",
    "lerobot>=0.3.3",
    "huggingface-hub>=0.35.3",
    "peft>=0.19.1",
    "mujoco>=3.8.0",
    "robosuite==1.4.1",
    "bddl>=3.6.0",
    "easydict>=1.13",
    "matplotlib>=3.10.9",
    "gym==0.25.2",
    "wandb>=0.24.2",
    "deepspeed>=0.18.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",         # for FastAPI TestClient
    "pyyaml>=6.0",         # explicit (currently transitive)
    "dlimp @ git+https://github.com/moojink/dlimp_openvla@040105d256bd28866cc6620621a3d5f7b6b91b46",  # OXE/RLDS pipeline; transitively pulls tensorflow==2.15.0 + tensorflow_datasets>=4.9.2
    "tensorflow-graphics>=2021.12",  # imported by prismatic/vla/datasets/rlds/oxe/utils/droid_utils.py (zero_action_filter)
    "bitsandbytes>=0.41",  # NF4 backbone quantization + AdamW8bit (optimizer_kind="adamw_8bit")
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_project"]

# Permit `dlimp @ git+https://...` direct reference in dependencies.
# dlimp is a fork of dlimp_openvla published only on GitHub, never on PyPI;
# the moojink/dlimp_openvla pin commit is the canonical OpenVLA / OXE
# RLDS data-pipeline implementation that all our baselines depend on.
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
filterwarnings = ["ignore::UserWarning"]

# Pin torch/torchvision to PyTorch's cu128 wheels because the host
# CUDA driver (12.8.0) is older than the cu130 wheels that uv would
# otherwise resolve. cu128 covers driver >= 12.6 which our system has.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

# Override lerobot's optional `transformers<5.0.0` upper cap. We need
# transformers>=5.x for Gemma4 model_type support; lerobot's core API
# (LeRobotDataset) does not depend on transformers internals.
[tool.uv]
override-dependencies = ["transformers>=5.5"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
