[project]
name = "vla_project"
version = "0.0.1"
description = "X-VLA-Adapter: Gemma4 + SigLIP + per-domain VLA-Adapter head"
# Both target environments (envs/x86, envs/jetson) currently require Python 3.10.
# x86 cu128 wheels also ship for 3.11, but the Jetson jetson-ai-lab index only
# publishes cp310 wheels, so we constrain the whole project to 3.10 for parity.
requires-python = ">=3.10,<3.11"
# Abstract runtime deps. Concrete torch / index pins live in envs/<env>/pyproject.toml.
# This pyproject only declares the `vla_project` Python package itself; the per-env
# pyprojects pull it in via a path dep and add the env-specific concrete pins,
# data-pipeline extras (dlimp/tensorflow), and PyTorch wheel sources.
dependencies = [
    "torch",
    "torchvision",
    "transformers>=5.5",   # Gemma4 model_type requires 5.5+ (5.0-5.4 only ships gemma3n)
    "accelerate>=1.0",
    "omegaconf>=2.3",
    "einops>=0.8",
    "tqdm>=4.66",
    "numpy>=1.26",
    "pillow>=10.0",
    "lerobot>=0.3.3",
    "huggingface-hub>=0.35.3",
    "peft>=0.19.1",
    "mujoco>=3.8.0",
    "robosuite==1.4.1",
    "bddl>=3.6.0",
    "easydict>=1.13",
    "matplotlib>=3.10.9",
    "gym==0.25.2",
    "wandb>=0.24.2",
    "deepspeed>=0.18.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",         # for FastAPI TestClient
    "pyyaml>=6.0",         # explicit (currently transitive)
    "bitsandbytes>=0.41",  # NF4 backbone quantization + AdamW8bit (optimizer_kind="adamw_8bit")
    "timm>=1.0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_project"]

# Permit `dlimp @ git+https://...` direct reference in envs/x86/pyproject.toml.
# dlimp is a fork of dlimp_openvla published only on GitHub, never on PyPI;
# the moojink/dlimp_openvla pin commit is the canonical OpenVLA / OXE
# RLDS data-pipeline implementation that all our baselines depend on.
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
filterwarnings = ["ignore::UserWarning"]
